Ajout de la création de compte, suppression de .class sur les modèles, ajout de UTF-8 pour la BDD

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "twig/twig": "^2.5",
 				"symfony/twig-bridge" : "^3.4",
         "doctrine/dbal": "^2.5",
-        "symfony/asset": "^3.4"
+        "symfony/asset": "^3.4",
+        "symfony/var-dumper": "^3.4"
     },
     "autoload": {
     	"psr-4": {
